--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,29 @@ services:
     container_name: menu_api
     image: menu_api:${VERSION:-latest}
     restart: always
-
     volumes:
       - .:/app
     ports:
-      - "9999:8000"
-#    env_file:
-#      - .env
+      - ${APP_EXPOSED_PORT}:8000
+    env_file:
+      - .env
     networks:
       - menu_net
+    depends_on:
+      - db
+  db:
+    image: postgres:14-alpine
+    restart: on-failure
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
+    ports:
+      - ${DB_PORT}:5432
+    volumes:
+      - ../2. Init Database:/docker-entrypoint-initdb.d
+      - .:/var/lib/postgresql/data
 
-networks:
-  menu_net:
+volumes:
+  pg:
+    driver: local
