--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ pydocstyle==6.3.0
 pyflakes==2.5.0
 pytest==7.2.1
 pytest-asyncio==0.19.0
+python-dotenv==0.21.1
 PyYAML==6.0
 rfc3986==1.5.0
 sentry-sdk==1.14.0
